Manifests/http-pod1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www1
  labels:
    name: www1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: www1
  template:
    metadata:  
      labels:
        app: www1
    spec:
      containers:
      - name: www1
        image: nginx:alpine
        ports:
          - containerPort: 80
            name: http
          - containerPort: 443
            name: https
        volumeMounts:
          - name: www1-persistent-storage
            mountPath: /usr/share/nginx/html
      volumes:
        - name: www1-persistent-storage
          persistentVolumeClaim:
            claimName: my-claim1
      nodeName: k8s-worker1
