Manifests/IngressService.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-service  
spec:
  selector:
    app: www2
  ports:
    - protocol: TCP
      name: http
      port: 5000
      targetPort: 80
    - protocol: TCP
      name: https
      port: 5001
      targetPort: 443
  #type: NodePort
