Manifests/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server-ingress
spec:
  ingressClassName: nginx
  #tls:
  #- hosts:
   #   - app.arka.com
    #secretName: testsecret-tls
  rules:
  - host: app.arka.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-server-service
            port:
              number: 5000     
  - host: web.arka.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-server-service1
            port:
              number: 5000
---
# test  :  curl 192.168.56.116:30798 -H 'Host: app.arka.com'
